--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,12 @@ android {
 
 dependencies {
 
+    // Room components
+    implementation "androidx.room:room-ktx:2.4.0"
+
+    // Coroutine support
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
