--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
 
     // Coroutine support
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
+    implementation "androidx.room:room-runtime:2.3.0"
+    //kapt "androidx.room:room-compiler:2.3.0"
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
