--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-}
+    id 'kotlin-android'
+    id 'kotlin-kapt'
 
+}
 android {
     namespace 'com.example.assignmentc'
     compileSdk 33
@@ -30,21 +32,33 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    kotlin {
+
+        jvmToolchain(8)
+    }
 }
-
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 dependencies {
-
+    def room_version = "2.5.1"
     // Room components
-    implementation "androidx.room:room-ktx:2.4.0"
+    implementation("androidx.room:room-runtime:$room_version")
+    kapt "androidx.room:room-compiler:$room_version"
+
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    kapt "android.arch.persistence.room:compiler:1.1.1"
+
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation("androidx.room:room-ktx:$room_version")
+
+    // Optional Room dependencies for additional features
 
     // Coroutine support
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
-    implementation "androidx.room:room-runtime:2.3.0"
-    //kapt "androidx.room:room-compiler:2.3.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1"
 
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
