--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,15 @@ buildscript {
         google()
         mavenCentral()
     }
-}
-plugins {
-    id 'com.android.application' version '8.0.0' apply false
-    id 'com.android.library' version '8.0.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.2.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
 
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
 }
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
